NetBSD Problem Report #54787

From www@netbsd.org  Thu Dec 19 15:02:29 2019
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 253077A17C
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 19 Dec 2019 15:02:29 +0000 (UTC)
Message-Id: <20191219150228.47B8B7A1D7@mollari.NetBSD.org>
Date: Thu, 19 Dec 2019 15:02:28 +0000 (UTC)
From: guest01@uo.com
Reply-To: guest01@uo.com
To: gnats-bugs@NetBSD.org
Subject: "install" flag does not set
X-Send-Pr-Version: www-1.0

>Number:         54787
>Category:       install
>Synopsis:       "install" flag does not set
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    install-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Dec 19 15:05:00 +0000 2019
>Closed-Date:    Wed Jun 09 02:47:33 +0000 2021
>Last-Modified:  Wed Jun 09 02:47:33 +0000 2021
>Originator:     guest01
>Release:        NetBSD 9.0 RC1
>Organization:
>Environment:
amd64
>Description:
I install NetBSD 9.0 RC1 from NetBSD-9.0_RC1-amd64-install.img.gz downloaded today.
I install NetBSD 9.0 RC1 on computer with NetBSD 8.0 and I want to keep partitions on the disk.
When I change install flag of a partition it does not change on the list of partitions.
>How-To-Repeat:
Boot computer with install image.

When you do installation procedure select "Edit the MBR partition table" change install flag and select Partition OK.
Status of partion (on the list of partitions) does not change.

Enter partition second time, set install flag and select Partion OK.
Status of partion is changed now
>Fix:

>Release-Note:

>Audit-Trail:
From: Martin Husemann <martin@duskware.de>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: install/54787: "install" flag does not set
Date: Fri, 10 Jan 2020 20:42:47 +0100

 Sorry, but I can not reproduce this.

 Here is how it looks for me (following your instructions - but I guess
 something is different to what you did and I misunderstood a detail):

 ----
  The Current MBR partition table of vnd0 is shown below.
  Flags: (I)nstall here, (a)ctive, (d)efault boot.
  Select the partition you wish to change:

     Total size of vnd0 is 1024000 sec, available: 1023999 sec

        Start(sec)     Size(sec) Flag Kind             Mount    Bootmenu
     ------------- ------------- ---- ---------------- -------- ---------
           (no partition defined)
     ------------- ------------- ---- ---------------- -------- ---------
 >c: Add a partition
  d: Clone external partition(s)
  e: Change input units (sectors/cylinders/MB/GB)
  f: Cancel
  x: Partition table OK
 ----
  ... hit ENTER, edit size (for fun) and exit with >x: Partition OK:
 ----
  The Current MBR partition table of vnd0 is shown below.
  Flags: (I)nstall here, (a)ctive, (d)efault boot.
  Select the partition you wish to change:

     Total size of vnd0 is 1024000 sec, available: 573471 sec

        Start(sec)     Size(sec) Flag Kind             Mount    Bootmenu
     ------------- ------------- ---- ---------------- -------- ---------
  a:            32        450528      NetBSD
     ------------- ------------- ---- ---------------- -------- ---------
 >c: Add a partition
  d: Clone external partition(s)
  e: Change input units (sectors/cylinders/MB/GB)
  f: Cancel     
  x: Partition table OK
 ----
  ... note that so far there was no option to mark the partition in any way.
 But now select a and hit ENTER and edit details:
 ----
                | a:        type : NetBSD                                   |
                | b:       start : 32 sec                                   |
     Total size | c:        size : 450528 sec                               |
                | d:         end : 450559 sec                               |
        Start(se| e:     install : Yes                                      |
     -----------| f:      active : Yes                                      |
 >a:            | g:     default : No                                       |
     -----------| h:    bootmenu :                                          |
  c: Add a parti| i: Change input units (sectors/cylinders/MB/GB)           |
  d: Clone e|ter| j: Delete partition                                       |
  e: Change inpu| k: Cancel                                                 |
  f: Cancel     |>x: Partition OK                                           |
 ----
  ... this results in the partition being marked as (I)nstall and (a)ctive:
 ----
  The Current MBR partition table of vnd0 is shown below.
  Flags: (I)nstall here, (a)ctive, (d)efault boot.
  Select the partition you wish to change:                                  

     Total size of vnd0 is 1024000 sec, available: 573471 sec

        Start(sec)     Size(sec) Flag Kind             Mount    Bootmenu
     ------------- ------------- ---- ---------------- -------- ---------
 >a:            32        450528 Ia   NetBSD
     ------------- ------------- ---- ---------------- -------- ---------
  c: Add a partition
  d: Clone external partition(s)
  e: Change input units (sectors/cylinders/MB/GB)
  f: Cancel     
  x: Partition table OK
 ----
  ... and when I leave this MBR editor with "x: Partition table OK" there will
 be no other chance to mark anything as (I)nstall, as we are now into the
 disklabel and this is already on the install-target MBR partition.

 So what did you do differently (or what did I overlook)?

 Martin

From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/54787 CVS commit: src/usr.sbin/sysinst
Date: Tue, 14 Jan 2020 19:28:32 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Tue Jan 14 19:28:32 UTC 2020

 Modified Files:
 	src/usr.sbin/sysinst: mbr.c

 Log Message:
 PR install/54787: when trying to derive proper alignement and first offset
 from exisiting partitions, use the first partition offset if it is already
 closer to the start of the disk than the prefered alignment - we can not
 move existing partitions around.


 To generate a diff of this commit:
 cvs rdiff -u -r1.25 -r1.26 src/usr.sbin/sysinst/mbr.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->feedback
State-Changed-By: maya@NetBSD.org
State-Changed-When: Tue, 21 Apr 2020 17:03:06 +0000
State-Changed-Why:
feedback requested: cannot reproduce, what are you doing differently? alternatively: does the commit done by martin help?


State-Changed-From-To: feedback->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Wed, 09 Jun 2021 02:47:33 +0000
State-Changed-Why:
Feedback request bounced. Nothing we can do with this.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.46 2020/01/03 16:35:01 leot Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2020 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.